--- a/root/Project-Feed/server/views/index.ejs
+++ b/root/Project-Feed/server/views/index.ejs
@@ -16,6 +16,7 @@
       <li><a href='/auth/twitter?action=CONNECT'>twitter  connect</a> <br /> </li>
       <li><a href='/auth/twitter?action=ADD_NEW_PROVIDER&userId=0d999119-1af5-46f2-b458-160764eba227'>twitter ad1d new provider</a> <br /> </li>
 
+      <li><a href='/auth/facebook?action=CONNECT'>facebook  connect</a> <br /> </li>
       <li><a href='/logout'>logout</a> <br /> </li>
     </ul>
 
